# ros2_research

./: .dockerignore  .gitignore  Makefile  PLAN.md  README.md  REVIEW.md  REVISED-PLAN.md  run.sh
autosar/: README.md
docker/: Dockerfile  docker-compose.yml
docs/: 01-architecture.md  02-dds-rtps.md  03-qos.md  04-discovery.md  05-rmw.md  06-microros-appendix.md  blog-robot-software-primer.md  blog-robot-software-stacks-2026-07.md
research/: automotive-stack-autosar-2026-07.md  claims-audit-2026-07.md  fact-check-2026-07-14.md  fact-check-2026-07-15.md  fact-check-2026-07-16.md  fact-check-2026-07-17.md  fact-check-2026-07-20.md  fleet-uds-autosar-2026-07.md  info-audit-2026-07-12.md  info-audit-2026-07-14.md  info-audit-2026-07-15.md  info-audit-2026-07-18.md  jetson-thor-memory-2026-07.md  nvidia-physical-ai-2026-07.md  nvidia-physical-ai-vs-automotive-2026-07.md  robot-software-stack-2026-07.md  ros2-deep-dive-2026-07.md  thor-unified-memory-2026-07.md  vda5050-robot-fleet-2026-07.md
runbook/: live-demo-runbook.md  research-transcript-vi.md  slides-transcript-vi.md
scripts/: build_drawio.py  build_pptx.py  build_slides.py  capture_pkgs.sh  capture_versions.sh  demo1_run.sh  demo3_run.sh  lib.sh  qos_run.sh  run_in_container.sh  verify_basic.sh  verify_middleware.sh  verify_qos.sh
slides/: deck.md  diagrams.drawio  (+5 more)
ws/src/demo_basic/: package.xml  setup.cfg  setup.py
ws/src/demo_basic/demo_basic/: add_two_ints_client.py  add_two_ints_server.py  fibonacci_action_client.py  fibonacci_action_server.py  listener.py  talker.py
ws/src/demo_basic/launch/: demo_basic.launch.py
ws/src/demo_basic_cpp/: CMakeLists.txt  package.xml
ws/src/demo_basic_cpp/src/: talker.cpp
ws/src/demo_qos/: package.xml  setup.cfg  setup.py
ws/src/demo_qos/demo_qos/: qos_common.py  qos_pub.py  qos_sub.py
(+88 files in other folders)
