<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>demo_basic</name>
  <version>0.1.0</version>
  <description>Demo 1: pub/sub + service + action in rclpy (teaching code).</description>
  <maintainer email="tinhhayho@gmail.com">tinh</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>example_interfaces</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
